--- a/index.html
+++ b/index.html
@@ -6,9 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <header class="wrapper">
+        <nav>
+            <a href="#">
+                <img src="./Images/Group40071.png" alt="">
+                <p>Hero <span>Travel</span></p>
+            </a>
+            <ul>
+                <li>Home</li>
+                <li>Packages</li>
+                <li>Testimonials</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+            <div class="icon">
+
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle"><i class="fa-solid fa-bars "></i></label>
+
+            </div>
+        </nav>
+    </header>
+    <main class="wrapper">
+        <section class="hero-sec">
+            <div class="hero-img-container">
+                <img src="./Images/Group13.png" alt="">
+                <div class="overlay"></div>
+                <div class="hero-content">
+                    <h1>Explore Your Travel</h1>
+                    <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim
+                        ac quis sapien urna eu phasellus.</p>
+                    <form>
+                        <input type="text" id="where" placeholder="Where go">
+                        <div id="when">
+                            <label for="time">When:</label>
+                            <select name="time" id="time">
+
+                            </select>
+                        </div>
+                        <div id="type">
+                            <label for="type" id="type-text">Select Type:</label>
+                            <select name="type" id="type">
+
+                            </select>
+                        </div>
+                        <div id="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="submit" value="Find Now">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
