--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="wrapper">
         <nav>
-            <a href="#">
+            <a href="#" id="logo">
                 <img src="./Images/Group40071.png" alt="">
                 <p>Hero <span>Travel</span></p>
             </a>
@@ -64,8 +64,28 @@
                 </div>
             </div>
         </section>
-    </main>
 
+    </main>
+    <footer>
+        <div class="footer-content">
+            <a href="#" id="logo">
+                <img src="./Images/Group40071.png" alt="">
+                <p>Hero <span>Travel</span></p>
+
+            </a>
+            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo
+                erat maecenas vitae elementum ultricies nullam. </p>
+            <div class="social-icon">
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"> <i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"> <i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <hr>
+            <p>2017, All Rights Reserved.</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
