--- a/index.html
+++ b/index.html
@@ -64,7 +64,35 @@
                 </div>
             </div>
         </section>
+        <section class="popular-tour">
+            <div class="popular-tour-content">
+                <div>
+                    <h3 class="section-title">Our Popular Tours</h3>
 
+                    <p class="description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                        massa. Sodales
+                        dictumst nec nibh pellentesque.</p>
+                    <ul>
+                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+                            odio neque diam. Sociis
+                            erat at .</li>
+                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+                            odio neque diam. Sociis
+                            erat at .</li>
+                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+                            odio neque diam. Sociis
+                            erat at .</li>
+                    </ul>
+
+
+
+                    <button class="btn">Read More</button>
+                </div>
+                <div>
+                    <img src="./Images/Rectangle4.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-content">
