destination section added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="wrapper">
         <section class="hero-sec">
             <div class="hero-img-container">
-                <img src="./Images/Group13.png" alt="">
+                <img src="./Images/group.png" alt="">
                 <div class="overlay"></div>
                 <div class="hero-content">
                     <h1>Explore Your Travel</h1>
@@ -91,6 +91,58 @@
                 <div>
                     <img src="./Images/Rectangle4.png" alt="">
                 </div>
+            </div>
+        </section>
+        <section class="destination-sec">
+            <div>
+                <h3 class="section-title">
+                    Choose Your Destination
+                </h3>
+                <p class="desciption">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec
+                    nibh pellentesque.
+                </p>
+            </div>
+
+            <div class="grid-container-outer">
+                <div>
+                    <img src="./Images/g1.png" alt="">
+                    <h4>Maldives</h4>
+                </div>
+
+                <div>
+                    <img src="./Images/g2.png" alt="">
+                    <h4>Indonesia</h4>
+                </div>
+            </div>
+            <div class="grid-container-inner">
+                <div class="item3">
+                    <img src="./Images/g3.png" alt="">
+                    <h4>Srilanka</h4>
+                </div>
+
+                <div class="item4">
+                    <img src="./Images/g4.png" alt="">
+                    <h4>North America</h4>
+                </div>
+
+                <div class="item5">
+                    <img src="./Images/g5.png" alt="">
+                    <h4>Kashmir</h4>
+                </div>
+
+                <div class="item6">
+                    <img src="./Images/g6.png" alt="">
+                    <h4>Bangladesh</h4>
+                </div>
+                <div class="item7">
+                    <img src="./Images/g7.png" alt="">
+                    <h4>Bandarban</h4>
+                </div>
+            </div>
+
+
             </div>
         </section>
     </main>
