why choose us section added

--- a/index.html
+++ b/index.html
@@ -145,6 +145,38 @@
 
             </div>
         </section>
+        <section class="choose-us-sec">
+            <div>
+                <h3 class="section-title">
+                    Why Choose Us
+                </h3>
+                <p class="desciption">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec
+                    nibh pellentesque.
+                </p>
+            </div>
+            <div class="choose-us-sec-content">
+                <div class="choose1">
+                    <img src="./Images/c1.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose2">
+                    <img src="./Images/c2.png" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="choose3">
+                    <img src="./Images/c3.png" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-content">
