--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                 <div class="overlay"></div>
                 <div class="hero-content">
                     <h1>Explore Your Travel</h1>
-                    <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim
-                        ac quis sapien urna eu phasellus.</p>
+                    <p>Embark on a thrilling journey to explore diverse landscapes, vibrant cultures, and hidden gems.
+                        Let curiosity guide your adventures, creating unforgettable memories with each destination you
+                        discover.</p>
                     <form>
                         <input type="text" id="where" placeholder="Where go">
                         <div id="when">
@@ -69,19 +70,16 @@
                 <div>
                     <h3 class="section-title">Our Popular Tours</h3>
 
-                    <p class="description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                        massa. Sodales
-                        dictumst nec nibh pellentesque.</p>
+                    <p class="description">Discover our popular tours, curated for unparalleled experiences. From iconic
+                        landmarks to hidden treasures, explore with us today!</p>
                     <ul>
-                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
-                            odio neque diam. Sociis
-                            erat at .</li>
-                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
-                            odio neque diam. Sociis
-                            erat at .</li>
-                        <li class="description">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
-                            odio neque diam. Sociis
-                            erat at .</li>
+                        <li class="description">Embark on extraordinary journeys with our popular tours, blending
+                            adventure, culture, and relaxation for unforgettable travel experiences worldwide</li>
+                        <li class="description">Uncover the allure of our sought-after tours, designed to captivate your
+                            senses and create lasting memories across stunning destinations.</li>
+                        <li class="description">Experience the magic of our acclaimed tours, weaving together
+                            breathtaking landscapes, cultural immersion, and unparalleled moments for your ultimate
+                            travel adventure.</li>
                     </ul>
 
 
@@ -99,9 +97,8 @@
                     Choose Your Destination
                 </h3>
                 <p class="desciption">
-                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
-                    nec
-                    nibh pellentesque.
+                    Embark on extraordinary journeys with our popular tours, blending adventure, culture, and relaxation
+                    for unforgettable travel experiences worldwide.
                 </p>
             </div>
 
@@ -151,29 +148,71 @@
                     Why Choose Us
                 </h3>
                 <p class="desciption">
-                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
-                    nec
-                    nibh pellentesque.
+                    Embark on extraordinary journeys with our popular tours, blending adventure, culture, and relaxation
+                    for unforgettable travel experiences worldwide.
                 </p>
             </div>
             <div class="choose-us-sec-content">
                 <div class="choose1">
                     <img src="./Images/c1.png" alt="">
                     <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Embark on extraordinary journeys with our renowned tours, where each adventure promises a perfect
+                        blend of discovery, excitement, and cultural enrichment. </p>
                 </div>
                 <div class="choose2">
                     <img src="./Images/c2.png" alt="">
                     <h3>World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Uncover the allure of our sought-after tours, designed to captivate your senses and create
+                        lasting memories across stunning destinations </p>
                 </div>
                 <div class="choose3">
                     <img src="./Images/c3.png" alt="">
                     <h3>Best Price Guarantee</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
-                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Indulge in our top-rated tours, expertly crafted for exceptional experiences. Immerse yourself in
+                        captivating destinations, creating memories that last a lifetime.</p>
+                </div>
+            </div>
+        </section>
+        <section class="newsletter-sec">
+            <div>
+                <h3>Newsletter</h3>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <input type="text" name="" id="name" placeholder="Enter your name">
+                <br>
+                <input type="email" name="" id="email" placeholder="Enter your email">
+                <br>
+                <button>Subscribe</button>
+            </div>
+            <div class="right-side">
+                <img src="./Images/rr.png" alt="">
+                <div class="styles">
+                    <p>Travel.com</p>
+                    <h3>Save up to 70%</h3>
+                </div>
+            </div>
+        </section>
+        <section class="top-sec">
+            <h3 class="section-title">
+                Top destinations for your next vacation
+            </h3>
+            <div class="top-sec-content">
+                <div class="grid-container-outer">
+                    <div>
+                        <img src="./Images/t1.jpg" alt="">
+                        <h4>Yellowstone <br> National Park</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/t2.jpg" alt="">
+                        <h4>Orlando, FL</h4>
+                    </div>
+                    <div>
+                        <img src="./Images/t3.jpg" alt="">
+                        <h4>Punta Cana </h4>
+                    </div>
+                    <div>
+                        <img src="./Images/t4.jpg" alt="">
+                        <h4>Sedona, AZ</h4>
+                    </div>
                 </div>
             </div>
         </section>
@@ -185,8 +224,8 @@
                 <p>Hero <span>Travel</span></p>
 
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo
-                erat maecenas vitae elementum ultricies nullam. </p>
+            <p>Embark on extraordinary journeys with our renowned tours, where each adventure promises a perfect blend
+                of discovery, excitement, and cultural enrichment.</p>
             <div class="social-icon">
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"> <i class="fa-brands fa-facebook-f"></i></a>
